<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ApartmentRating"
    tools:context=".view.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/appview" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/newsreader_regular"
            android:gravity="center"
            android:text="@string/livingood"
            android:textColor="@color/lightGreyGreen"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <SearchView
            android:id="@+id/wel_sv_place"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_border"
            android:iconifiedByDefault="false"
            app:defaultQueryHint="Search"
            app:queryBackground="@drawable/round_border" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/min_price"
                    android:textSize="12dp" />

                <Spinner
                    android:id="@+id/wel_sp_min_price"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:ellipsize="marquee"
                    android:entries="@array/price" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/maxprice"
                    android:textSize="12dp" />

                <Spinner
                    android:id="@+id/wel_sp_max_price"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:entries="@array/price" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/bedroom"
                    android:textSize="12dp" />

                <Spinner
                    android:id="@+id/wel_sp_bedroom"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:ellipsize="marquee"
                    android:entries="@array/bedroom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/bathroom"
                    android:textSize="12dp" />

                <Spinner
                    android:id="@+id/wel_sp_bathroom"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:entries="@array/bathroom" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPreference"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/preference"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">

                <CheckBox
                    android:id="@+id/cb_food"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/lightGreen"
                    android:text="@string/food" />

                <CheckBox
                    android:id="@+id/cb_security"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/lightGreen"
                    android:text="@string/security" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">

                <CheckBox
                    android:id="@+id/cb_transit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/lightGreen"
                    android:text="@string/transit" />

                <CheckBox
                    android:id="@+id/cb_store"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/lightGreen"
                    android:text="@string/store" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/radius"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <SeekBar
                    android:id="@+id/wel_sk_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:entries="@array/bathroom"
                    android:max="15"
                    android:progressTint="@color/lightGreen"
                    android:thumbTint="@color/lightGreen" />

                <TextView
                    android:id="@+id/wel_tv_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0.5 MI" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_search"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_selector"
            android:text="@string/search"
            app:queryBackground="@drawable/round" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="-60dp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@color/lightGreyGreen"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>